# imgui_reversi

./: .gitignore  CMakeLists.txt  compile_commands.json  main.cpp
src/: Application.cpp  Application.h  Board.cpp  Board.h  CMakeLists.txt  Demo.cpp  Demo.h  HalloWorld.cpp  HalloWorld.h  Image.cpp  Image.h  Layer.h  Player.cpp  Player.h  Status.cpp  Status.h  Tile.cpp  Tile.h
